--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 
 :root {
   --main:#222831;
-  --main-50:#22283150;
+  --main-50:#22283180;
   --main-75:#222831BF;
   --accent1:#30475e;
   --accent2:#c1a57b;
@@ -18,9 +18,9 @@
   --content-font: 'Fauna One';
 }
 
-:root {
+/* :root {
   --main:#222831;
-  --main-50:#3c424550;
+  --main-50:#3c424580;
   --main-75:#3c4245BF;
   --accent1:#393e46;
   --accent2:#b55400;
@@ -29,7 +29,7 @@
   --accent3:#eeeeee;
   --hdr-font: 'Playfair Display';
   --content-font: 'Fauna One';
-}
+} */
 
 
 /* :root {
@@ -640,11 +640,11 @@ div::-webkit-scrollbar-button:single-button:horizontal:increment:active,div::-we
 }
 #title-underlay {
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   top:0;
   left:0;
-  background: var(--main-75);
+  background: var(--main-50);
   z-index: 0;
 }
 .carousel-img {
@@ -659,8 +659,8 @@ div::-webkit-scrollbar-button:single-button:horizontal:increment:active,div::-we
   top: 0;
   left: 0;
   box-sizing: border-box;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   /* border: 1pt solid var(--accent3); */
 }
 #bg-img-div {
